# VacancyParser

./: Makefile  README.md  example_env_file  main.py  pyproject.toml  requirements.txt  settings.py
api/: api_abc.py  api_classes.py  headhunter_api.py  superjob_api.py
credentials/: __init__.py  db.py  superjob.py
database/: config.py  database.ini  db.py
database/setub_db/: connection.py  create_db.py  setup.py
database/sql_scripts/: create_tables.sql
file_managers/: json_manager.py  manager_abc.py
file_managers/json_vacancies/: vacancies.json
utils/: functions.py
vacancyparser/: abc.py  descriptors.py  main.py  models.py  vacancy.py
